fix cart container z-index

--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,7 @@ a {
 .cart-container {
   display: none;
   position: absolute;
-  z-index: 99;
+  z-index: 98;
   background-color: white;
   border-radius: 10px;
   width: 94%;
